kube/alrest/x/johaus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: johaus
  labels:
    app.kubernetes.io/name: johaus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: johaus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: johaus
    spec:
      runtimeClassName: kata
      securityContext:
        fsGroup: 1000
      containers:
        - name: main
          image: ghcr.io/xe/x/johaus:latest
          imagePullPolicy: "Always"
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
