kube/alrest/x/johaus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: johaus
  labels:
    app.kubernetes.io/name: johaus
spec:
  selector:
    app.kubernetes.io/name: johaus
  ports:
    - port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
